--- a/css/media.css
+++ b/css/media.css
@@ -144,6 +144,13 @@
         transform: none;
         margin-top: 20px;
     }
+
+    .shop-now-btn {
+        width: 175px;
+        height: 40px;
+        font-size: 16px;
+        padding: 8px 20px;
+    }
     
     .carousel-nav__prev,
     .carousel-nav__next {
