Change stlye to product grid image
Product grid image wasn't matching to the figma design.

--- a/css/media.css
+++ b/css/media.css
@@ -76,6 +76,10 @@
         grid-template-columns: repeat(2, 1fr);
     }
 
+    .product-card img {
+    max-width: 350px;
+    }
+
     /*Product Page */
       .product-detail-section {
         flex-direction: column;
