--- a/css/style.css
+++ b/css/style.css
@@ -370,7 +370,6 @@ footer ul li a:hover {
     text-decoration: none;
     background-color: var(--color-white);
     border: var(--color-accent) 3px solid;
-    overflow: hidden;
     max-width: 420px;
     height: auto;
     transition: transform 0.3s ease, box-shadow 0.1s ease;
@@ -383,8 +382,9 @@ footer ul li a:hover {
 }
 
 .product-card img {
-    width: 350px;
-    height: 352px;
+    width: 100%;
+    max-height: 352px;
+    aspect-ratio: 350/352;
     object-fit: cover;
     background-color: var(--color-white);
     display: block;
@@ -396,26 +396,25 @@ footer ul li a:hover {
     display: flex;
     justify-content: space-between;
     gap: 10px;
-    
+    font-family: var(--font-heading);
+    color: var(--color-text);
+    font-size: var(--font-size-body);
 }
 
 .product-card h3 {
-    font-family: var(--font-heading);
-    font-size: 1rem;
     font-weight: 400;
     text-transform: uppercase;
+    text-decoration: none;
 }
+
 
 .product-card_rating {
     display: flex;
     align-items: center;
-    font-size: 0.9rem;
     gap: 0.3rem;
 }
 
 .product-card_price {
-    font-size: 1rem;
-    color: var(--color-text);
     margin-bottom: 2rem;
 }
 
